<resources>
    <string name="app_name">Music service</string>
    
    <string-array name="sort">
        <item>by default</item>
        <item>by name</item>
        <item>by release</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="main_image">main image</string>
    <string name="albums">Albums</string>
    <string name="button">Button</string>
    <string name="my_playlists">My playlists</string>
    <string name="my_albums">My albums</string>
    <string name="chart">Chart</string>
    <string name="new_albums">New albums</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="tracks">Tracks</string>
    <string name="show_image">show image</string>
    <string name="name_of_music">Name of music</string>
    <string name="duration">Duration</string>
    <string name="to_artist">To artist</string>
    <string name="to_playlist">To playlist</string>
    <string name="artist">Artist</string>
    <string name="musics">Musics</string>
    <string name="my_musics">My musics</string>
    <string name="playlists">Playlists</string>
    <string name="recommended">Recommended</string>
    <string name="all_musics">All musics</string>
</resources>
